# algebraic-filter

./: .algebraic-filter.json.example  .gitignore  CLAUDE.md  CONTRIBUTING.en.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  Dockerfile.scalpel  LICENSE  README.en.md  README.ja.md  README.md  USAGE.en.md  USAGE.ja.md  USAGE.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  release_notes_v0.1.0.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  violation_sample_request.md
.github/workflows/: ci.yml
af_phase2/: __init__.py  crosshair_bridge.py  exhaustive.py  generator.py  inferrer.py  law_templates.py
af_phase3/: __init__.py  purity_checker.py  runtime_checker.py  scalpel_bridge.py  static_checker.py
af_phase3_scalpel/: __init__.py  cfg_analyzer.py
af_phase4/: __init__.py  anti_pattern_tracker.py  config.py  feedback_formatter.py  phase2_runner.py
docs/: algebraic_filter_phase0_pre_reg.md  algebraic_filter_project_plan.md  algebraic_filter_related_work.md  architecture.en.md  architecture.ja.md  architecture.md  evidence_summary.en.md  evidence_summary.ja.md  evidence_summary.md  hybrid_setup.ja.md  hybrid_setup.md  limitations.ja.md  limitations.md  philosophy.ja.md  philosophy.md  philosophy_filter_integration.en.md  philosophy_filter_integration.md  tool_landscape.md  troubleshooting.en.md  troubleshooting.ja.md  troubleshooting.md
docs/_ab_measurement/: log_hook_off_2026-05-20.md  log_template.md  protocol.md  tasks_neutral.md
docs/_comparison/: competitor_comparison_20260520_112818.json
docs/_index/: aet_os_reference.md
docs/_plugin_verification/: docker_hybrid_hook_fire_2026-05-21.json  hybrid_competitor_plus_af_2026-05-21.json  live_plugin_load_hook_fire_2026-05-21.json
examples/hybrid-starter/: .algebraic-filter.json  .gitignore  README.md  setup_hybrid.ps1  setup_hybrid.sh
hooks/: hooks.json  posttool_af_check.py
samples/violations/: README.md  ann001_missing_type.py  any_type_overuse.py  b007_unused_loop_variable.py  c416_unnecessary_comprehension.py  commutativity_violation_in_named_commutative.py  dict_keys_list_for_iter.py  (+41 more)
scripts/: ab_automation.py  ab_automation_wide.py  af_ci.py  compare_competitor.py  eval_algebra_mutants.py  eval_perflint.py  eval_quixbugs.py  miss_loop.py
(+93 files in other folders)
