[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algebraic-filter"
version = "0.1.0"
description = "AI生成コードに対する代数法則レベルの機械検証ガードレール (Claude Code skill + PostToolUse hook)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ChaiCroquis" }]
requires-python = ">=3.10"
keywords = ["claude-code", "property-based-testing", "algebraic-laws", "ai-code-verification", "hook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "hypothesis>=6.0",
    "ruff>=0.4",
]

[project.optional-dependencies]
phase3 = [
    "icontract>=2.6",
    "crosshair-tool>=0.0.100",
]
phase4 = [
    "mypy>=1.10",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/ChaiCroquis/algebraic-filter"
Issues = "https://github.com/ChaiCroquis/algebraic-filter/issues"

[tool.setuptools.packages.find]
include = ["af_phase2*", "af_phase3*", "af_phase4*"]
exclude = ["af_phase3_scalpel*", "samples*", "scratch*", "docs*", "scripts*", "hooks*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["samples/violations/tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# AF source の self-lint は基本 syntax + import 級のみ enforce
# 違反 pattern の検出は samples/violations/ + manifest 駆動 TDD の責務 (= AF が自分自身を lint する mandate ではない)
select = ["E", "F", "W"]
ignore = [
    "E501",  # line-length は ruff format で対応
]

[tool.ruff.lint.per-file-ignores]
# samples/violations/*.py は意図的違反保持、 ただし per-file-ignores で "ALL" 指定すると
# test_manifest_driven.py の subprocess ruff check が 全 rule ignore されて test fail。
# CI workflow の ruff target に samples/ を含めない設計で意図的違反保持を維持する。
"scratch/*.py" = ["ALL"]  # throwaway file
